objects/OAB_Lead_Passer__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>OAB Lead Passers</relationshipLabel>
        <relationshipName>OAB_Lead_Passers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <inlineHelpText>This is the date of the NBB credit, if any</inlineHelpText>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <description>returns integer of current year</description>
        <formula>Year( Warm_Lead__r.Account__r.Today__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;M Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;O Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB R&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International R&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Period__c</fullName>
        <label>Goal Period</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_YTD_Period__c</fullName>
        <description>Returns 1 if credit date in YTD period.  Used in combination with credit year.</description>
        <formula>if(
	((Month( Credit_Date__c ) &lt; Month( Today__c))
		|| ((Month( Credit_Date__c ) = Month( Today__c))
				&amp;&amp; (DAY(Credit_Date__c) &lt;= Day( Today__c))
			)
	),
	1,
	0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In YTD Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date_Last_Year__c</fullName>
        <formula>IF(ISBLANK( Warm_Lead_Initial_Visit_Date__c ), 0, 
IF(YEAR(Warm_Lead_Initial_Visit_Date__c) = YEAR(TODAY()) - 1, 1, 0))</formula>
        <label>Initial Visit Date Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_Date_This_Year__c</fullName>
        <formula>IF(ISBLANK( Warm_Lead_Initial_Visit_Date__c ), 0, 
IF(YEAR(Warm_Lead_Initial_Visit_Date__c) = YEAR(TODAY()), 1, 0))</formula>
        <label>Initial Visit Date This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Count_2__c</fullName>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>IF(  $RecordType.DeveloperName = &quot;Goal&quot;, 0,  Lead_Count_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Credit_Year__c</fullName>
        <description>Year of the OAB Credit Date</description>
        <formula>Year( Credit_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Credit Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Passed_by_Current_User__c</fullName>
        <formula>if(Passer__r.Employee_User_Record__r.Id =  $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Passed by Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Tracker_ID__c</fullName>
        <label>Legacy Tracker ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAB_Count_Goal__c</fullName>
        <label>OAB Count Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAB_Credit_Goal__c</fullName>
        <label>OAB Credit Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAB_Goal_Type__c</fullName>
        <label>OAB Goal Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAB_NBB_Credit__c</fullName>
        <label>OAB NBB Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OAB_NBB_Shadow_Credit__c</fullName>
        <formula>IF(
	AND(
		NOT(ISNULL(OAB_NBB_Credit__c)),
		OR(
			ISPICKVAL(Warm_Lead__r.Primary_Program__r.Business_line__c, &apos;SW&apos;),
                        ISPICKVAL(Warm_Lead__r.Primary_Program__r.Business_line__c, &apos;CM&apos;),
			ISPICKVAL(Warm_Lead__r.Primary_Program__r.Business_line__c, &apos;PT&apos;)
		)
	),
	OAB_NBB_Credit__c*(0.3),
	OAB_NBB_Credit__c
)</formula>
        <label>OAB NBB Shadow Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OAB_Unit_Credit__c</fullName>
        <label>OAB Unit Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or Passer is not an Employee Contract Record Type.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAB Lead Passers</relationshipLabel>
        <relationshipName>OAB_Lead_Passers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_OAB_NBB__c</fullName>
        <formula>if((year( Credit_Date__c )=(year( Today__c )-1) &amp;&amp;  In_YTD_Period__c =1),  OAB_NBB_Credit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev YTD OAB NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_YTD_OAB_Units__c</fullName>
        <formula>if((year( Credit_Date__c )=(year( Today__c  )-1) &amp;&amp; In_YTD_Period__c =1),  OAB_Unit_Credit__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev YTD OAB Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prev_Year_OAB_NBB__c</fullName>
        <formula>if((year( Credit_Date__c )=(year(today())-1)), OAB_NBB_Credit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year OAB NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Year_OAB_Units__c</fullName>
        <formula>if((year( Credit_Date__c )=(year(today())-1)),  OAB_Unit_Credit__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Year OAB Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Business_Line__c</fullName>
        <formula>TEXT(Warm_Lead__r.Primary_Program__r.Business_line__c)</formula>
        <label>Program Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>holds the value today by batch process</description>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_Initial_Visit_Date__c</fullName>
        <formula>Warm_Lead__r.Initial_Visit_Date__c</formula>
        <label>Warm Lead Initial Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_Lead_Date__c</fullName>
        <formula>Warm_Lead__r.Lead_Date__c</formula>
        <label>Warm Lead Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warm_Lead__c</fullName>
        <label>Warm Lead</label>
        <referenceTo>Warm_Lead__c</referenceTo>
        <relationshipLabel>OAB Lead Passers</relationshipLabel>
        <relationshipName>OAB_Lead_Passers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_in_Current_Year__c</fullName>
        <formula>Warm_Lead__r.In_Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Lead in Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_in_Previous_Year__c</fullName>
        <formula>Warm_Lead__r.In_Previous_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Lead in Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_OAB_NBB__c</fullName>
        <formula>if((year( Credit_Date__c )= Year(Today__c ) &amp;&amp;  In_YTD_Period__c =1),  OAB_NBB_Credit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD OAB NBB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_OAB_Units__c</fullName>
        <formula>if((year( Credit_Date__c )=year(Today__c ) &amp;&amp; Credit_Date__c&lt;=Today__c ),   OAB_Unit_Credit__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD OAB Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OAB Lead Passer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Today_Testing</fullName>
        <columns>NAME</columns>
        <columns>Today__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Today Testing</label>
    </listViews>
    <listViews>
        <fullName>Testing</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Passer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OAB_Lead_Passer__c.Standard</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>Passer__c</field>
            <operation>contains</operation>
            <value>Owen Crean</value>
        </filters>
        <label>Testing</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAB Lead Passers</pluralLabel>
    <recordTypes>
        <fullName>Goal</fullName>
        <active>true</active>
        <label>Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>